Add Husky pre-commit hook and update configuration

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,4 @@
-@use "reset" as *;
+@use 'reset' as *;
 
-@use "tailwindcss";
-
-@use "text" as *;
-@use "var" as *;
+@use 'text' as *;
+@use 'var' as *;
