--- a/src/layout/Header/header.module.scss
+++ b/src/layout/Header/header.module.scss
@@ -4,6 +4,10 @@
   left: 0;
   width: 100%;
   z-index: 10;
+  & h1 {
+    color: #000;
+    font-size: 10rem;
+  }
   &_inner {
     position: relative;
     &_wrap {
