--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,4 +1,4 @@
-@use 'tool' as *;
+@use "tool" as *;
 
 * {
   margin: 0;
@@ -126,7 +126,7 @@ body {
   font-family: var(--font-PPNeueMontreal);
   background-color: var(--main-background);
   color: var(--white);
-  font-size: vw(10px, 1920px);
+  font-size: vw(10px);
 
   ::-webkit-scrollbar {
     display: none;
@@ -142,7 +142,7 @@ video::-webkit-media-controls {
   display: none;
 }
 
-img:is([loading='lazy']) {
+img:is([loading="lazy"]) {
   background-repeat: no-repeat;
   background-size: cover;
 }
