--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -123,7 +123,7 @@ body {
   scroll-behavior: unset !important;
   overscroll-behavior-y: none !important;
   min-height: -webkit-fill-available;
-  font-family: var(--font-PPNeueMontreal);
+  font-family: var(--font-inter);
   background-color: var(--main-background);
   color: var(--white);
   font-size: vw(10px);
