--- a/src/layout/Header/header.module.scss
+++ b/src/layout/Header/header.module.scss
@@ -1,52 +1,27 @@
-// .header {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   z-index: 10;
-//   & h1 {
-//     color: #000;
-//     font-size: 10rem;
-//   }
-//   &_inner {
-//     position: relative;
-//     &_wrap {
-//       position: relative;
-//       padding-top: rem(30px);
-//       padding-bottom: rem(30px);
-//       display: flex;
-//       z-index: 999;
-//       justify-content: space-between;
-//       align-items: center;
-//       &_logo {
-//         cursor: pointer;
-//         &_txt {
-//           transition-duration: 0.3s;
-//         }
-//       }
-//       &_icon {
-//         cursor: pointer;
-//         display: flex;
-//         align-items: flex-end;
-//         flex-direction: column;
-//         gap: rem(10px);
-//         &:hover {
-//           .line_top {
-//             transition-duration: 0.3s;
-//             width: rem(65px);
-//           }
-
-//           .line_bottom {
-//             transition-duration: 0.3s;
-//             width: rem(45px);
-//           }
-//         }
-//       }
-//     }
-//     &_line {
-//       width: 100%;
-//       height: 1px;
-//       background-color: var(--gray);
-//     }
-//   }
-// }
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  &_container {
+    padding: rem(25px) 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &_logo {
+    width: rem(148px);
+    height: rem(63px);
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+  &_menu {
+    display: flex;
+    align-items: center;
+    gap: rem(50px);
+  }
+}
