--- a/src/components/Typo/Label/styles.module.scss
+++ b/src/components/Typo/Label/styles.module.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  &__22 {
+    @include laptop {
+      font-size: rem(22px);
+    }
+  }
+
   &__24 {
     @include laptop {
       font-size: rem(24px);
