feat: enhance Label component by adding new size option (60) and update styles for improved typography. Refactor About component to include new Label instances for project statistics with updated layout in SCSS.

--- a/src/components/Typo/Label/styles.module.scss
+++ b/src/components/Typo/Label/styles.module.scss
@@ -72,4 +72,9 @@
     font-size: rem(13px);
     line-height: normal;
   }
+
+  &__60 {
+    font-size: rem(60px);
+    line-height: normal;
+  }
 }
