--- a/src/modules/HomePage/About/about.module.scss
+++ b/src/modules/HomePage/About/about.module.scss
@@ -31,5 +31,20 @@
       line-height: 1.5;
       max-width: rem(624px);
     }
+
+    &_items {
+      margin-top: rem(108px);
+      display: grid;
+      max-width: rem(650px);
+      width: 100%;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: rem(60px);
+      &_item {
+        display: flex;
+        max-width: rem(206px);
+        flex-direction: column;
+        gap: rem(10px);
+      }
+    }
   }
 }
