--- a/src/components/Typo/Paragraph/styles.module.scss
+++ b/src/components/Typo/Paragraph/styles.module.scss
@@ -30,4 +30,8 @@
     line-height: 0.88em;
     letter-spacing: rem(-0.16px);
   }
+  &__20 {
+    font-size: rem(20px);
+    line-height: 1.3em;
+  }
 }
