feat: update Offer component to include multiple ItemOffer instances, enhancing service presentation. Refactor styles and enums for improved typography and layout consistency.

--- a/src/styles/_text.scss
+++ b/src/styles/_text.scss
@@ -24,6 +24,10 @@
   color: var(--vani);
 }
 
+.text__dark-grey {
+  color: var(--dark-grey);
+}
+
 // Font weight when init new project
 .font-weight__800 {
   font-weight: 800;
