--- a/src/styles/_var.scss
+++ b/src/styles/_var.scss
@@ -6,5 +6,6 @@
   --black: #000000;
   --blue: #0000ff;
   --vani: #fff8f8;
-  --bg-background: #111;
+  --dark-grey: #292929;
+  --bg-background: #111111;
 }
