--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -151,7 +151,7 @@ body {
   line-height: 110%;
   font-weight: normal;
   color: #000;
-  background-color: var(--dark-grey);
+  background-color: var(--bg-background);
   transition: background-color 0.4s var(--easeInOutQuart);
 }
 
