refactor: standardize padding across Footer, About, Gallery, and Offer components by replacing fixed values with CSS variables. Enhance ItemOffer component layout and styling for improved presentation.

--- a/src/layout/Footer/footer.module.scss
+++ b/src/layout/Footer/footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: rem(60px);
+  padding-top: var(--spacing-section);
   padding-bottom: rem(47px);
   &_left {
     display: flex;
