--- a/src/modules/HomePage/Projects/Slide/slide.module.scss
+++ b/src/modules/HomePage/Projects/Slide/slide.module.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     gap: rem(20px);
+    // margin-right: rem(50px);
     &_image {
       width: 100%;
       height: rem(450px);
@@ -51,7 +52,6 @@
   height: 100%;
   &_container {
     display: flex;
-    height: 100%;
     gap: rem(50px);
     touch-action: pan-x pinch-zoom;
   }
