--- a/src/modules/HomePage/Projects/projects.module.scss
+++ b/src/modules/HomePage/Projects/projects.module.scss
@@ -27,10 +27,22 @@
     align-items: center;
     justify-content: center;
     width: rem(49px);
+    background-color: transparent;
     height: rem(49px);
-    svg {
+    &:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      & svg path {
+        stroke: #292929;
+      }
+    }
+    & svg {
       width: 100%;
       height: 100%;
+      & path {
+        transition: stroke 0.3s ease-in-out;
+        stroke: var(--vani);
+      }
     }
   }
 }
