style: update embla styles in Slide component to improve layout and responsiveness; add padding and will-change property for better performance.

--- a/src/modules/HomePage/Projects/Slide/slide.module.scss
+++ b/src/modules/HomePage/Projects/Slide/slide.module.scss
@@ -49,10 +49,12 @@
 }
 
 .embla {
-  height: 100%;
+  overflow: visible;
+  padding-right: rem(50px);
   &_container {
     display: flex;
     gap: rem(50px);
+    will-change: transform;
     touch-action: pan-x pinch-zoom;
   }
 }
