--- a/src/modules/HomePage/Hero/hero.module.scss
+++ b/src/modules/HomePage/Hero/hero.module.scss
@@ -5,11 +5,24 @@
   &_background {
     width: 100%;
     height: 100%;
+    position: relative;
 
-    & img {
+    & video,
+    img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
     }
   }
 
