--- a/src/animation/pages/Preloader/preloader.module.scss
+++ b/src/animation/pages/Preloader/preloader.module.scss
@@ -4,11 +4,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+  transition: opacity 1s ease-in-out;
+  opacity: 1;
   background-color: var(--bg-background);
   z-index: 1000;
-}
-
-.hide {
-  opacity: 0;
-  visibility: hidden;
 }
