style: add mix-blend-mode to italic and normal text styles in Hero component for enhanced visual effects.

--- a/src/modules/HomePage/Hero/hero.module.scss
+++ b/src/modules/HomePage/Hero/hero.module.scss
@@ -58,8 +58,10 @@
       height: 100%;
       &_italic {
         font-style: italic;
+        mix-blend-mode: difference;
       }
       &_normal {
+        mix-blend-mode: difference;
         font-style: normal;
 
         &:last-child {
