chore: update ESLint configuration to warn on console usage and clean up GridDebug component by removing console.log statements; adjust SCSS content property syntax for consistency

--- a/src/components/GridDebug/styles.module.scss
+++ b/src/components/GridDebug/styles.module.scss
@@ -21,7 +21,7 @@ $color-debug: #ff6b4c;
 
     &::before {
       background-color: rgba($color-debug, 0.3);
-      content: "";
+      content: '';
       height: 100%;
       left: 0;
       position: absolute;
@@ -30,15 +30,11 @@ $color-debug: #ff6b4c;
 
     &::after {
       background-color: rgba($color-debug, 0.3);
-      content: "";
+      content: '';
       height: 100%;
       right: 0;
       position: absolute;
       width: 1px;
     }
   }
-}
-
-.hidden {
-  display: none;
 }
